# uuv2_gazebo_model_plugins

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: action-ros-ci.yml  action-ros-lint.yml
include/uuv2_gazebo_model_plugins/: BuoyantObject.hh  BuoyantObject.hpp  Def.hh  Def.hpp  HydrodynamicModel.hh  HydrodynamicModel.hpp  ThrusterConversionFunction.hpp  ThrusterDynamics.hpp  ThrusterPlugin.hpp  UnderwaterObjectPlugin.hh  UnderwaterObjectPlugin.hpp
msgs/: double.proto
src/: BuoyantObject.cc  BuoyantObject.cpp  HydrodynamicModel.cc  HydrodynamicModel.cpp  ThrusterConversionFunction.cpp  ThrusterDynamics.cpp  ThrusterPlugin.cpp  UnderwaterObjectPlugin.cc  UnderwaterObjectPlugin.cpp
test/: underwater_sphere_spawn.test.py
test/models/: underwater_sphere.xacro
